<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Show"
    android:background="@drawable/main_background">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_guide_right"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.86"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_guide_center_right"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.62"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_guide_center_left"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.38"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_guide_left"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.14"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_amount"
        android:text="@string/amountText"
        app:layout_constraintRight_toRightOf="@id/show_guide_right"
        app:layout_constraintLeft_toLeftOf="@id/show_guide_right"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/HeadTexts"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_day"
        android:text="@string/dayText"
        app:layout_constraintRight_toRightOf="@id/show_guide_center_right"
        app:layout_constraintLeft_toLeftOf="@id/show_guide_center_right"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/HeadTexts"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_condition"
        android:text="@string/conditionText"
        app:layout_constraintRight_toRightOf="@id/show_guide_center_left"
        app:layout_constraintLeft_toLeftOf="@id/show_guide_center_left"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/HeadTexts"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_date"
        android:text="@string/dateText"
        app:layout_constraintRight_toRightOf="@id/show_guide_left"
        app:layout_constraintLeft_toLeftOf="@id/show_guide_left"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/HeadTexts"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/show_recycler"
        app:layout_constraintTop_toBottomOf="@id/show_amount"
        android:layout_marginTop="@dimen/dp12"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />


</androidx.constraintlayout.widget.ConstraintLayout>