<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".UI.Edit">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_linear_1"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp12"
        android:layoutDirection="ltr"
        >

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_edittext_amount"
            android:inputType="number"
            style="@style/EdittextsAdd"
            android:maxLength="4"
            android:layout_weight="0.7"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_amount"
            android:text="@string/amountText"
            style="@style/TextsAdd"
            android:layout_weight="0.3"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_linear_2"
        android:layout_below="@id/edit_linear_1"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp12"
        android:layoutDirection="ltr">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_edittext_hour"
            android:focusable="false"
            style="@style/EdittextsAdd"
            android:layout_weight="0.7"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_hour"
            style="@style/TextsAdd"
            android:layout_weight="0.3"
            android:text="@string/hour"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_linear_3"
        android:layout_below="@id/edit_linear_2"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp12"
        android:layoutDirection="ltr"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_edittext_date"
            android:focusable="false"
            style="@style/EdittextsAdd"
            android:layout_weight="0.7"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_date"
            style="@style/TextsAdd"
            android:layout_weight="0.3"
            android:text="@string/dateText"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_linear_4"
        android:orientation="horizontal"
        android:layout_below="@id/edit_linear_3"
        android:layout_marginTop="@dimen/dp12"
        >
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_spinner_drug_type"
            android:background="@null"
            android:popupBackground="#D5F3F0"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_weight="0.5"
            />
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_spinner_condition"
            android:background="@null"
            android:popupBackground="#D5F3F0"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:layout_weight="0.5"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_linear_5"
        android:layout_below="@id/edit_linear_4"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp12"
        android:layoutDirection="ltr"
        >

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_edittext_consum"
            style="@style/EdittextsAdd"
            android:maxLength="12"
            android:maxLines="1"
            android:layout_weight="0.7"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_consum"
            android:text="@string/consumtionText"
            style="@style/TextsAdd"
            android:layout_weight="0.3"
            />
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_edittext_food"
        style="@style/EdittextsAdd"
        android:textColorHint="#1A2530"
        android:textAlignment="textStart"
        android:maxLines="2"
        android:layout_below="@id/edit_linear_5"
        android:layout_marginTop="@dimen/dp12"
        android:hint="@string/foodText"
        android:paddingRight="@dimen/dp6"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_edittext_detail"
        style="@style/EdittextsAdd"
        android:textColorHint="#1A2530"
        android:textAlignment="textStart"
        android:maxLines="5"
        android:layout_below="@id/edit_edittext_food"
        android:layout_marginTop="@dimen/dp12"
        android:hint="@string/detailText"
        android:paddingRight="@dimen/dp12"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_button_edit"
        style="@style/mainButtons"
        android:background="@drawable/main_buttons"
        android:text="ویرایش"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/dp30"
        android:layout_marginBottom="@dimen/dp30"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_button_remove"
        style="@style/mainButtons"
        android:background="@drawable/main_buttons"
        android:text="حذف"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/edit_button_edit"
        android:layout_marginLeft="@dimen/dp12"
        android:layout_marginBottom="@dimen/dp30"/>

</RelativeLayout>